# cmake_project_template

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  conanfile.py  conanfile.txt  gcovr.cmake  googletest.cmake  lint.sh  test.sh
brace_checker/: CMakeLists.txt  brace_checker.cpp  brace_checker.h  brace_checker_test.cpp
src/: CMakeLists.txt  test_main.cpp
src/algorithms/: CMakeLists.txt  brace_checker.cpp  brace_checker.h  brace_checker_test.cpp
src/module_name/: CMakeLists.txt  myclass.cpp  myclass_test.cpp
src/module_name2/: CMakeLists.txt  test_main.cpp
